@@ -552,18 +552,22 @@ class Monitor:
             process.stdin.write('q')
             time.sleep(1)
 
-        if process.poll() is None:
-            self.log.write(0, '[%s] sending SIGTERM' % command['command']['section'])
-            os.kill(process.pid, signal.SIGTERM)
-            time.sleep(1)
+        try:
+            if process.poll() is None:
+                self.log.write(0, '[%s] sending SIGTERM' % command['command']['section'])
+                os.kill(process.pid, signal.SIGTERM)
+                time.sleep(1)
 
-        if process.poll() is None:
-            self.log.write(0, '[%s] sending SIGKILL' % command['command']['section'])
-            os.kill(process.pid, signal.SIGKILL)
+            if process.poll() is None:
+                self.log.write(0, '[%s] sending SIGKILL' % command['command']['section'])
+                os.kill(process.pid, signal.SIGKILL)
 
-        process.wait()
-        if process.stdin and not process.stdin.closed:
-            process.stdin.close()
+            process.wait()
+            if process.stdin and not process.stdin.closed:
+                process.stdin.close()
+
+        except OSError:
+            self.log.write(0, '[%s] command already gone' % command['command']['section'])
 
         self.log.write(0, '[%s] stopped' % command['command']['section'])
 
